# mplhep

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .semantic.yml  .travis.yml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Examples.ipynb  FINAL_TEST_OUTPUT.txt  LICENSE  MANIFEST.in  MATPLOTLIB_COMPATIBILITY_TEST_REPORT.md  README.md  TEST_RESULTS_SUMMARY.md  install.sh  noxfile.py  pixi.toml  pyproject.toml  pytest.ini  setup.cfg  setup.py  versions.json
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: CD.yml  backport.yml  branch-sync.yml  bump-release.yml  cd.yml  ci-pages.yml  ci.yml  ci_latex.yml  head-dependencies.yml  mark.yml  pages-publish.yml  pr_cron.yml  publish-package.yml  tag.yml
.tools/: git-cleanup.sh
1.0/: 404.html  index.html  sitemap.xml
1.0/CONTRIBUTING/: index.html
1.0/CONTRIBUTING_DOC/: index.html
1.0/api/: index.html
1.0/gallery/: index.html
1.0/guide/: index.html
1.0/guide_advanced/: index.html
1.0/guide_utilities/: index.html
1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1/CONTRIBUTING/: index.html
1.1/CONTRIBUTING_DOC/: index.html
1.1/api/: index.html
1.1/gallery/: index.html
1.1/guide/: index.html
1.1/guide_advanced/: index.html
1.1/guide_utilities/: index.html
1.1/search/: search_index.json
1.2/: 404.html  index.html  sitemap.xml
1.2/CONTRIBUTING/: index.html
1.2/CONTRIBUTING_DOC/: index.html
1.2/api/: index.html
1.2/gallery/: index.html
1.2/guide/: index.html
1.2/guide_advanced/: index.html
1.2/guide_utilities/: index.html
1.3/: 404.html  index.html  objects.inv  sitemap.xml
1.3/CONTRIBUTING/: index.html
1.3/CONTRIBUTING_DOC/: index.html
1.3/api/: index.html
1.3/gallery/: index.html
1.3/guide/: index.html
1.3/guide_advanced/: index.html
1.3/guide_utilities/: index.html
1.3/stylesheets/: neoteroi-timeline.css
binder/: postBuild
cmsstyle/: __init__.py  cms_helpers.py  styles.py
cmsstyle/stylelib/: ROOT.mplstyle  ROOTlegacy.mplstyle  ROOTs.mplstyle  firamath.mplstyle
dev/: 404.html  index.html  objects.inv  sitemap.xml  svg_utils.py
dev/CONTRIBUTING/: index.html
dev/CONTRIBUTING_DOC/: index.html
dev/api/: index.html
dev/gallery/: index.html
dev/guide/: index.html
dev/guide_advanced/: index.html
dev/guide_utilities/: index.html
dev/search/: search_index.json
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  guide.rst  index.rst  install.rst
examples/: Examples.ipynb  dune_style_example.py
examples/1d_histograms/: 1d_comparison_asymmetry.py  1d_comparison_difference.py  1d_comparison_efficiency.py  1d_comparison_only_efficiency.py  1d_comparison_pull.py  1d_comparison_ratio.py  1d_comparison_relative_difference.py  1d_comparison_split_ratio.py
examples/model_ex/: model_all_comparisons.py  model_all_comparisons_no_model_unc.py  model_examples_pull.py  model_examples_pull_no_model_unc.py  model_examples_stacked.py  model_examples_stacked_unstacked.py  model_examples_unstacked.py  model_with_stacked_and_unstacked_function_components.py  model_with_stacked_and_unstacked_histograms_components.py  ratio_data_vs_model_with_stacked_and_unstacked_function_components.py
hepstyle/: __init__.py  atlas.py  cms.py  plot.py  styles.py  tools.py
hepstyle/atlas/: atlas.py  styles_atlas.py
hepstyle/cms/: cms.py  styles_cms.py
mplhep/: .VERSION  __init__.py  _deprecate.py  alice.py  atlas.py  cms.py  cms_helpers.py  error_estimation.py  label.py  lhcb.py  plot.py  pyplot.py  styles.py  styles_atlas.py  styles_cms.py  styles_lhcb.py  tools.py  utils.py
mplhep/stylelib/: ROOT.mplstyle  ROOTlegacy.mplstyle  ROOTtex.mplstyle  fabiola.mplstyle  fira.mplstyle  firamath.mplstyle
new_docs/: CONTRIBUTING.md  CONTRIBUTING_DOC.md  docs_hooks.py  generate_style_guides.py  mkdocs.yml  mkdocs_norender.yml  requirements.txt
new_docs/docs/: .htaccess  CONTRIBUTING_DOC.md  api.md  baseline  contributing.md  gallery.md  guide.md  guide_advanced_template.md  guide_basic_plotting_template.md  guide_comparisons_template.md  guide_overview_template.md  guide_styling_template.md  guide_template.md  guide_utilities_template.md  index.md  install.md
pr-683/: 404.html  index.html  resize_svg.py  sitemap.xml
pr-683/CONTRIBUTING/: index.html
pr-683/CONTRIBUTING_DOC/: index.html
pr-683/api/: index.html
pr-683/gallery/: index.html
pr-683/guide/: index.html
pr-683/guide_advanced/: index.html
pr-683/guide_utilities/: index.html
src/mplhep/: __init__.py  _compat.py  _deprecate.py  _dev.py  _tools.py  _utils.py  alice.py  atlas.py  blind.py  cms.py  comp.py  comparison.py  comparison_functions.py  comparison_plotters.py  default_style.mplstyle  dune.py  error_estimation.py  exp_alice.py  exp_atlas.py  exp_cms.py  exp_dune.py  exp_lhcb.py  exp_snoplus.py  label.py  layout.py  lhcb.py  lhcb2.py  lhcb_common.py  palettes.py  plot.py  plot_comp.py  styles.py  styles_alice.py  styles_cms.py  styles_lhcb.py  styles_lhcb2.py  test_helpers.py  tools.py  utils.py
tests/: conftest.py  helpers.py  test.py  test_basic.py  test_blind.py  test_blind_visual.py  test_comparison.py  test_comparison_basic.py  test_comparison_complex.py  test_comparison_complexe.py  test_comparison_flow.py  test_comparison_low_count.py  test_dune.py  test_enhanced_plottable_histogram.py  test_examples_1d_histograms.py  test_examples_data_model.py  test_hists_flow.py  test_inputs.py  test_labels.py  test_layout.py  test_layouts.py  test_lhcb3.py  test_make_plottable_histogram.py  test_matplotlib_compat.py  test_mock.py  test_mpl_magic.py  test_notebooks.py  test_snoplus.py  test_styles.py  test_styles_latex.py  test_styles_ratio_plot.py  test_utils.py  test_variant.py  test_visual_cycler.py
tests/copilot/: test_funcplot.py  test_hist2dplot_cbarpos.py  test_hist_raw.py  test_lhcb3_subplots_adjust.py  test_merge_legend.py  test_save_labels.py
tests/from_issues/: test_comparison_flow.py  test_hists_flow.py  test_issue594.py  test_issue_511.py  test_issue_650_lhcb_subplots_adjust.py
(+153 files in other folders)
