[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mplhep"
dynamic = ["version"]
description = "Matplotlib styles for HEP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "andrzejnovak", email = "novak5andrzej@gmail.com" },
]
classifiers = [
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.4",
    "mplhep-data>=0.0.4",
    "numpy>=1.16.0",
    "packaging",
    "uhi>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "bumpversion",
    "jupyter",
    "pre-commit",
    "questionary",
    "twine",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material[imaging]>=9.0",
    # mkdocs-matplotlib installed separately from git (see install.sh or dev instructions)
    "neoteroi-mkdocs",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocstrings[python]>=0.20",
    "griffe_inherited_docstrings",
]
test = [
    "boost_histogram",
    "hist",
    "pytest-mock",
    "pytest-mpl",
    "pytest-xdist",
    "pytest>=6.0",
    "scikit-hep-testdata",
    "scipy>=1.1.0",
    "uproot",
    "uproot4",
    "seaborn",
]
benchmark = [
    "pytest-benchmark",
]
all = [
    "mplhep[dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/scikit-hep/mplhep"

[project.scripts]
dev = "mplhep._dev:main"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/mplhep/_version.py"
metadata.allow-direct-references = true


[dependency-groups]
dev = [
    "mplhep[test]",
]
docs = [
    "mplhep[docs]",
]
all = [
    "mplhep[dev,test,docs]",
]

[tool.uv]
environments = [
    "python_version >= '3.10'",
]


[tool.mypy]
files = ["src"]
python_version = "3.9"
warn_unused_configs = true

allow_redefinition = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = false
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "cycler", "scipy.*", "mpl_toolkits.*", "mplhep_data", "questionary.*"]
ignore_missing_imports = true


# Additional configuration is in matplotlib/testing/conftest.py.
[tool.pytest.ini_options]
minversion = 6.0
addopts = ["-ra", "--strict-markers"]  # need to fix pytest dependency installs to enable --strict-config
filterwarnings = [
  "error",
  "default:urllib3 v2 only supports OpenSSL",
  "default:invalid value encountered in _fmt:RuntimeWarning",
]
log_level = "INFO"
python_files = "test*.py"
testpaths = ["tests"]
xfail_strict = true
markers = [
    "latex: tests that require LaTeX to be installed",
]


[tool.ruff.lint]
extend-select = [
    "B", # flake8-bugbear
    "I", # isort
    "PERF", # perflint
    "ARG", # flake8-unused-arguments
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "EM", # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G", # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TRY", # tryceratops
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD", # pandas-vet
    "FURB", # refurb
    "PYI", # flake8-pyi
    "BLE", # flake8-blind-except
    "FA", # flake8-future-annotations
    "FLY", # flynt
    "ISC", # flake8-implicit-str-concat
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "SLOT", # flake8-slots
    "T10", # flake8-debugger
    "TC", # flake8-type-checking
    "LOG", # flake8-logging
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
  "NPY002",   # np.random.Generator
  "G004",     # Logging with f-string
  "PD011",    # .values vs .to_numpy can get confused
  "PT013",    # Import from pytest
  "E402",     # Make examples more readable
  "RUF022",   # Unsorted __all__
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "RUF059"]
"docs/source/conf.py" = ["T20", "LOG015"]
"src/mplhep/_dev.py" = ["T20"]
"test_*.py" = ["T20"]
"src/mplhep/styles/*.py" = ["FLY002"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = { features = ["dev", "test", "docs"], solve-group = "default" }
dev = { features = ["dev", "test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
benchmark = { features = ["test", "benchmark"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.feature.test.tasks]
test = "pytest -r sa --mpl --mpl-results-path=pytest_results"
test-parallel = "pytest -r sa --mpl --mpl-results-path=pytest_results -n auto"
test-basic = "pytest tests/"
test-single = "pytest"
generate-baseline = "pytest -r sa --mpl --mpl-generate-path=tests/baseline"

[tool.pixi.feature.benchmark.tasks]
benchmark = "pytest --benchmark-only --benchmark-sort=mean"
benchmark-run = "pytest --benchmark-only --benchmark-sort=mean --benchmark-save=latest"
benchmark-compare = "pytest --benchmark-only --benchmark-compare=latest"

[tool.pixi.feature.dev.tasks]
lint = "ruff check src/"
format = "ruff format src/"
format-check = "ruff format --check src/"

[tool.pixi.dependencies]
python = ">=3.9,<3.14"
pytest = ">=9.0.1,<10"
matplotlib = ">=3.4"
numpy = ">=1.16.0"
packaging = "*"

[tool.pixi.pypi-dependencies]
mplhep = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest-mock = "*"
pytest-mpl = "*"
pytest-xdist = "*"
scipy = ">=1.1.0"
seaborn = "*"

[tool.pixi.feature.benchmark.dependencies]
pytest-benchmark = "*"

[tool.pixi.feature.dev.dependencies]
jupyter = "*"
twine = "*"
ruff = "*"
pre-commit = "*"
questionary = "*"
mkdocs = ">=1.6"
