[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mplhep"
dynamic = ["version"]
description = "Matplotlib styles for HEP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "andrzejnovak", email = "novak5andrzej@gmail.com" },
]
classifiers = [
    "Framework :: Matplotlib",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "matplotlib>=3.4,<3.10; python_version < '3.10'",
    "matplotlib>=3.10.8; python_version >= '3.10'",
    "mplhep-data>=0.0.4",
    "numpy>=1.16.0",
    "packaging",
    "pyparsing<3.3.0; python_version < '3.10'",  # Avoid oneOf deprecation warning with older matplotlib
    "uhi>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "bumpversion",
    "jupyter",
    "prek",
    "questionary",
    "twine",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material[imaging]>=9.0",
    # mkdocs-matplotlib installed separately from git (see install.sh or dev instructions)
    "neoteroi-mkdocs",
    "mkdocs-minify-plugin",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocstrings[python]>=0.20",
    "griffe_inherited_docstrings",
]
test = [
    "boost_histogram",
    "hist",
    "pytest-mock",
    "pytest-mpl",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest>=6.0",
    "scikit-hep-testdata",
    "scipy>=1.1.0",
    "uproot>=5.0",
    "seaborn",
]
all = [
    "mplhep[dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/scikit-hep/mplhep"

[project.scripts]
dev = "mplhep._dev:main"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/mplhep/_version.py"
metadata.allow-direct-references = true


[dependency-groups]
dev = [
    "mplhep[test]",
]
docs = [
    "mplhep[docs]",
]
all = [
    "mplhep[dev,test,docs]",
]

[tool.uv]
environments = [
    "python_version >= '3.10'",
]

[tool.mypy]
files = ["src"]
python_version = "3.9"
warn_unused_configs = true

allow_redefinition = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = false
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "cycler", "scipy.*", "mpl_toolkits.*", "mplhep_data", "questionary.*"]
ignore_missing_imports = true


# Additional configuration is in matplotlib/testing/conftest.py.
[tool.pytest.ini_options]
minversion = 6.0
addopts = ["-ra", "--strict-markers"]  # need to fix pytest dependency installs to enable --strict-config
filterwarnings = [
  "error",
  "default:urllib3 v2 only supports OpenSSL",
  "default:invalid value encountered in _fmt:RuntimeWarning",
  "ignore::pytest_benchmark.logger.PytestBenchmarkWarning",
  "ignore:In the future `np.object` will be defined:FutureWarning",
]
log_level = "INFO"
python_files = "test*.py"
testpaths = ["tests"]
xfail_strict = true
markers = [
    "latex: tests that require LaTeX to be installed",
]


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN",      # Not fully typed
  "C9",       # Complexity
  "COM812",   # Trailing commas teach the formatter
  "D",        # Documentation
  "E402",     # Make examples more readable
  "E501",     # Line too long
  "FBT001",   # Boolean positional
  "FBT002",   # Boolean positional
  "FIX",      # Limits todos
  "G004",     # Logging with f-string
  "ISC001",   # Conflicts with formatter
  "N",        # Can't change naming in some cases
  "NPY002",   # np.random.Generator
  "PD011",    # .values vs .to_numpy can get confused
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "PT013",    # Import from pytest
  "PTH",      # Pathlib
  "RUF022",   # Unsorted __all__
  "S101",     # Assert is used by mypy and pytest
  "S603",     # Check for untrusted input
  "SLF001",   # Private member accessed
  "TD",       # Todo format
  "ERA001",   # Commented out code is currently common (TODO?)
]
flake8-builtins.ignorelist = ["copyright", "range"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "RUF059", "INP001", "S"]
"{new_docs,docs,examples}/**" = ["INP001", "S", "T20", "LOG015"]
"src/mplhep/_dev.py" = ["T20"]
"src/mplhep/styles/*.py" = ["FLY002"]
