[metadata]
name = mplhep
version = file: src/mplhep/.VERSION
long_description = file: README.md
long_description_content_type = text/markdown
author = andrzejnovak
author_email = "novak5andrzej@gmail.com"
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT License
description = Matplotlib styles for HEP
url = https://github.com/scikit-hep/mplhep
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Framework :: Matplotlib
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics


[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    mplhep_data
    matplotlib>=3.4
    numpy>=1.16.0
    packaging
    uhi>=0.2.0

[options.packages.find]
where = src

# Additional configuration is in matplotlib/testing/conftest.py.
[tool:pytest]
minversion = 3.7
testpaths = tests
python_files = test*.py

[flake8]
# F401: some imports are used by code which is dynamically loaded <- check again later
max-line-length = 88
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503, B950

[mypy]
files = src
python_version = 3.7
warn_unused_configs = True

# disallow_any_generics = True
# disallow_subclassing_any = True
# disallow_untyped_calls = True
# disallow_untyped_defs = True
# disallow_incomplete_defs = True
check_untyped_defs = True
# disallow_untyped_decorators = True
# no_implicit_optional = True
# warn_redundant_casts = True
# warn_unused_ignores = True
# warn_return_any = True
# no_implicit_reexport = True
# strict_equality = True

[tool:isort]
profile = black
multi_line_output = 3
