[metadata]
name = mplhep
# version = file: src/mplhep/.VERSION
long_description = file: README.md
long_description_content_type = text/markdown
author = andrzejnovak
author_email = "novak5andrzej@gmail.com"
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT License
description = Matplotlib styles for HEP
url = https://github.com/scikit-hep/mplhep
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Framework :: Matplotlib
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Physics


[options]
zip_safe = False
python_requires = >=3.7
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    mplhep_data
    matplotlib>=3.4
    numpy>=1.16.0
    packaging
    uhi>=0.2.0

[options.packages.find]
where = src


[flake8]
select = B,C,E,F,W,T4,B9
extend-ignore = B950, W503, E501, E203
