[metadata]
name = mplhep
description = Matplotlib styles for HEP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/mplhep
author = andrzejnovak
author_email = "novak5andrzej@gmail.com"
maintainer = Scikit-HEP
maintainer_email = scikit-hep-admins@googlegroups.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Matplotlib
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
install_requires =
    matplotlib>=3.4
    mplhep-data
    numpy>=1.16.0
    packaging
    uhi>=0.2.0
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[flake8]
select = B,C,E,F,W,T4,B9
extend-ignore = B950, W503, E501, E203, B905
